--- a/app/views/lpa/v1/enter-code.html
+++ b/app/views/lpa/v1/enter-code.html
@@ -1,7 +1,7 @@
 {% set pageref = "" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Manage Planning Inspectorate appeals" %}
+{% set serviceName = "Manage your planning inspectorate appeals" %}
 
 {% set title = "Enter the code we sent to your email address" %}
 
