--- a/app/views/final-comments/v2/case-officer/appeal-link.html
+++ b/app/views/final-comments/v2/case-officer/appeal-link.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Manage Planning Inspectorate appeals" %}
+{% set serviceName = "Manage your planning inspectorate appeals" %}
 
 {% set title = "Link to the appeal" %}
 
