--- a/app/views/lpa/v1/request-code.html
+++ b/app/views/lpa/v1/request-code.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 
-{% set title = "Confirm you want to add this user" %}
+{% set title = "Request a new code" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -17,38 +17,34 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
 {% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
 
-    <form method="post">
+    <span class="govuk-caption-l">{{ subServiceName }}</span>
 
-      <label class="govuk-label govuk-label--l" for="email">
+    <div class="govuk-form-group">
+
+      <label class="govuk-label govuk-label--l" for="postcode">
         {{ title }}
       </label>
 
-      <p class="govuk-body-l">
-        {% if data['email'] %}
-          {{ data['email']+"@leeds.gov.uk" }}
-        {% else %}
-          sam.aye@leeds.gov.uk
-        {% endif %}
+      <p class="govuk-body">
+        Emails sometimes take a few minutes to arrive. If you do not receive the code, you can request a new one.
       </p>
 
       {{ govukButton({
-        text: "Add user"
+        href: "enter-code",
+        text: "Request a new code"
       }) }}
 
-    </form>
+    </div>
 
   </div>
+
 </div>
 
 {% endblock %}
