Link back to LPA account

--- a/app/views/lpa-questionnaire/v10/task-list.html
+++ b/app/views/lpa-questionnaire/v10/task-list.html
@@ -8,7 +8,7 @@
 
   {{ govukBackLink({
     html: 'Back to your planning appeals',
-    href: 'javascript:history.back()'
+    href: '/lpa/v1/appeals'
   }) }}
 {% endblock %}
 
