Back link on confirmation page

--- a/app/views/lpa-questionnaire/v10/confirmation.html
+++ b/app/views/lpa-questionnaire/v10/confirmation.html
@@ -28,7 +28,7 @@
       <p>We&rsquo;ll review your evidence and will be in touch if we need any further information.</p>
 
       <p>
-        <a href="#0">What did you think of this service?</a> (takes 30 seconds)
+        <a href="/lpa/v1/appeals" class="govuk-link--no-visited-state">Back to your planning appeals</a>
       </p>
 
     </div>
