--- a/app/views/lpa/v1/appeals.html
+++ b/app/views/lpa/v1/appeals.html
@@ -66,7 +66,7 @@
             {{ 20 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
-            <a href="/lpa-questionnaire/v10/task-list?appeal=1021222" class="govuk-link govuk-link--no-visited-state">
+            <a href="/lpa-questionnaire/v10/task-list?non-determination=false" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a>
           </td>
@@ -86,7 +86,7 @@
             {{ 15 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
-            <a href="/lpa-questionnaire/v10/task-list?appeal=1287330" class="govuk-link govuk-link--no-visited-state">
+            <a href="/lpa-questionnaire/v10/task-list?non-determination=true" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a>
           </td>
