Quick n dirty addition of start page route into LPA dashboard

--- a/app/views/lpa/v1/appeals.html
+++ b/app/views/lpa/v1/appeals.html
@@ -33,7 +33,7 @@
     </h1>
 
     <p class="govuk-body">
-      <a href="access" class="govuk-link">
+      <a href="access?action=" class="govuk-link">
         People who can view and edit these appeals
       </a>
     </p>
