--- a/app/views/lpa/v1/access.html
+++ b/app/views/lpa/v1/access.html
@@ -111,7 +111,11 @@
 
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
-            gil.caligiuri@leeds.gov.uk
+            {% if data['myemail'] %}
+              {{ data['myemail'] }}
+            {% else %}
+              gil.caligiuri@leeds.gov.uk
+            {% endif %}
           </td>
 
           <td class="govuk-table__cell">
