--- a/app/views/lpa/v1/email.html
+++ b/app/views/lpa/v1/email.html
@@ -35,7 +35,7 @@
           </label>
 
           <div class="govuk-form-group">
-            <input class="govuk-input" id="email" name="email" type="text" spellcheck="false" autocomplete=none value="" style="text-transform:uppercase">
+            <input class="govuk-input" id="myemail" name="myemail" type="email" spellcheck="false" autocomplete=none value="">
           </div>
 
         </div>
