--- a/app/views/lpa/v1/request-for-information.html
+++ b/app/views/lpa/v1/request-for-information.html
@@ -1,7 +1,7 @@
 {% extends "layout-email.html" %}
 
 {% block pageTitle %}
-  Submit questionnaire for ENF13579F - GOV.UK
+  Submit questionnaire for ENF13579F
 {% endblock %}
 
 {% block content %}
