--- a/app/views/lpa-questionnaire/v10/_layout.html
+++ b/app/views/lpa-questionnaire/v10/_layout.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+{% set bodyClasses = bodyClasses | default("internal") %}
+{% set serviceName = '<span class="dept">Planning Inspectorate</span> Manage Appeals' | safe %}
+{% block pageTitle %}
+  Manage Appeals — Planning Inspectorate
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
