LPA accounts update

--- a/app/assets/sass/pins/save-return.scss
+++ b/app/assets/sass/pins/save-return.scss
@@ -25,7 +25,7 @@
 .pins-prototype-only a:active,
 .pins-prototype-only a:focus {
   background-color: #efefef;
-  color: darkorange !important;
+  color: #0b0c0c !important;
   padding: 1rem;
   position: relative;
   left: -1rem;
