--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,7 +55,13 @@
                         <a href="/lpa/v1/service-invite">Invite to service / manage team</a>
                       </li>
                       <li>
-                        <a href="/lpa/v1/access-no-appeals">Manage your team</a>
+                        <a href="/lpa/v1/no-appeals">No appeals</a>
+                      </li>
+                      <li>
+                        <a href="/lpa/v1/manage-appeals">Invite to manage appeals</a>
+                      </li>
+                      <li>
+                        <a href="/lpa/v1/start">Service start page (entry using email address)</a>
                       </li>
                     </ul>
 
