--- a/app/views/lpa/v1/confirm-remove.html
+++ b/app/views/lpa/v1/confirm-remove.html
@@ -34,7 +34,7 @@
       </label>
 
       <p class="govuk-body">
-        When you remove a user, the email address will not have access to manage your appeals and will not receive appeal notifcations.
+        When you remove a user, the email address will not have access to manage appeals and will not receive appeal notifcations.
       </p>
 
       <p class="govuk-body">
