--- a/app/views/lpa/v1/give-access.html
+++ b/app/views/lpa/v1/give-access.html
@@ -38,11 +38,11 @@
           </label>
 
           <p class="govuk-body">
-            You can add a new user to manage the appeals. They must have a local authority email address.
+            You can add a user to manage appeals. They must have a local authority email address.
           </p>
 
           <p class="govuk-body">
-            Enter their email address and we’ll send them an invite link.
+            Enter their email address to add them.
           </p>
 
           <div class="govuk-form-group">
@@ -52,7 +52,7 @@
         </div>
 
         {{ govukButton({
-          text: "Send invite link"
+          text: "Continue"
         }) }}
 
       </form>
