--- a/app/views/lpa/v1/manage-appeals.html
+++ b/app/views/lpa/v1/manage-appeals.html
@@ -1,17 +1,17 @@
 {% extends "layout-email.html" %}
 
 {% block pageTitle %}
-  Invitation to your new account
+  You’re invite to manage appeals
 {% endblock %}
 
 {% block content %}
 <!-- faux email header -->
 <section>
     <p>
-    <strong>Subject:</strong> Invitation to your new account
+    <strong>Subject:</strong> You’re invite to manage appeals
   </p>
   <p>
-    <strong>To:</strong> {{ data['lpa-email'] or 'planningappeals@leeds.gov.uk'}}<br>
+    <strong>To:</strong> {{ data['email']+'@leeds.gov.uk' or 'added.user@leeds.gov.uk'}}<br>
     <strong>From:</strong> info@planninginspectorate.gov.uk
   </p>
   <p>
@@ -24,24 +24,21 @@
   <div class="govuk-grid-column-two-thirds">
 
     <p class="govuk-body">
-      Dear Leeds City Council
+      You’ve been added to the Leeds City Council account to manage planning appeals.
     </p>
 
     <p class="govuk-body">
-      The Planning Inspectorate has launched a new service for local planning authorities (LPAs) to manage your appeals and has created a new account for Leeds City Council.
-    </p>
-
-    <p class="govuk-body">
-      You can use the ‘Manage your planning appeals’ service to:
+      You can use the Planning Inspectorate’s ‘Manage your appeals’ service to:
     </p>
 
     <ol class="govuk-list govuk-list--number">
       <li>
-        add and remove users
+        add information to appeal questionnaires
       </li>
       <li>
-        complete and submit an appeal questionnaire
+        add and remove users
       </li>
+
       {# <li>
         invite someone else to complete an appeal questionnaire
       </li> #}
@@ -52,8 +49,8 @@
     </ol>
 
     <p class="govuk-body">
-      To view your new account and add your team, follow the link to receive a secure code:<br>
-      <a href="enter-code?start=invite" class="govuk-link">https://manage-appeals.planninginspectorate.gov.uk/enter-code</a>
+      To view your account, follow the link to receive a secure access code:<br>
+      <a href="enter-code?start=added" class="govuk-link">https://manage-appeals.planninginspectorate.gov.uk/enter-code</a>
     </p>
 
     <p class="govuk-body">
