--- a/app/views/lpa/v1/request-code.html
+++ b/app/views/lpa/v1/request-code.html
@@ -37,7 +37,7 @@
       </p>
 
       {{ govukButton({
-        href: "enter-code",
+        href: "use-code",
         text: "Request a new code"
       }) }}
 
