--- a/app/views/lpa/v1/request-for-information.html
+++ b/app/views/lpa/v1/request-for-information.html
@@ -53,7 +53,7 @@
 
     <p class="govuk-body">
       Go to the link to receive a code:<br>
-      <a href="enter-code" class="govuk-link">www.gov.uk/manage-planning-inspectorate-appeals/lpa/v1/enter-code?app=d81vW7td12s4t5gff728y29</a>
+      <a href="enter-code?start=questionnaire" class="govuk-link">www.gov.uk/manage-planning-inspectorate-appeals/lpa/v1/enter-code?app=d81vW7td12s4t5gff728y29</a>
     </p>
 
     {# <ol class="govuk-list govuk-list--number">
