--- a/app/views/lpa/v1/access.html
+++ b/app/views/lpa/v1/access.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 
-{% set title = "Manage your users" %}
+{% set title = "Manage users" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -17,10 +17,18 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
-  {{ govukBackLink({
-    text: "Back to your planning appeals",
-    href: "appeals"
-  }) }}
+  {% if data['appeals'] == "yes" %}
+    {{ govukBackLink({
+      text: "Back to your planning appeals",
+      href: "appeals"
+    }) }}
+  {% else %}
+    {{ govukBackLink({
+      text: "Back to your planning appeals",
+      href: "no-appeals"
+    }) }}
+  {% endif %}
+
 {% endblock %}
 
 {% block content %}
@@ -35,9 +43,9 @@
             {{ data['email']+"@leeds.gov.uk" }}
           {% else %}
             sam.aye@leeds.gov.uk
-          {% endif %} has been invited to manage your planning appeals
+          {% endif %} has been added to the account
         </h3>
-        {# <p class="govuk-body">If they accept the invite they will appear in the list below and will be able to access all appeals.</p> #}
+        <p class="govuk-body">They will receive an email with a link to the service.</p>
       </mark>
     {% endset %}
 
@@ -73,17 +81,24 @@
     </label>
 
     <p class="govuk-body">
+      Added users can add information to appeals. All users will receive notifications about new appeals.
+    </p>
+
+    <p class="govuk-body">
       <a href="give-access" class="govuk-link">
         Add a user
       </a>
     </p>
+  </div>
+
+  <div class="govuk-grid-column-one-half">
 
     <table class="govuk-table">
 
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">User</th>
-          <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Action</th>
+          <th scope="col" class="govuk-table__header govuk-table__cell--numeric govuk-!-width-one-quarter"></th>
         </tr>
       </thead>
 
@@ -100,7 +115,7 @@
               {% endif %}
             </td>
 
-            <td class="govuk-table__cell">
+            <td class="govuk-table__cell govuk-table__cell--numeric">
               <a href="confirm-remove" class="govuk-link govuk-link--no-visited-state">
                 Remove<span class="visually-hidden"> this user</span>
               </a>
@@ -114,7 +129,7 @@
             {% if data['myemail'] %}
               {{ data['myemail'] }}
             {% else %}
-              gil.caligiuri@leeds.gov.uk
+              your.name@leeds.gov.uk
             {% endif %}
           </td>
 
@@ -138,7 +153,6 @@
           </a>
         </p>
       </div>
-
     {% endif %}
 
   </div>
