--- a/app/views/lpa/v1/email.html
+++ b/app/views/lpa/v1/email.html
@@ -1,5 +1,5 @@
 {% set pageref = "" %}
-{% extends "layout.html" %}
+{% extends location+"_layout.html" %}
 
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 
