Content update for LPA first time use

--- a/app/views/lpa/v1/access.html
+++ b/app/views/lpa/v1/access.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 
-{% set title = "Manage users" %}
+{% set title = "Manage account users" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -81,7 +81,7 @@
     </label>
 
     <p class="govuk-body">
-      Added users can add information to appeals. All users will receive notifications about new appeals.
+      Account users can add information to appeals. All users will receive email notifications about new appeals.
     </p>
 
     <p class="govuk-body">
