--- a/app/views/lpa/v1/appeals.html
+++ b/app/views/lpa/v1/appeals.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 
-{% set title = "Manage your planning appeals" %}
+{% set title = "Leeds planning appeals" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -32,10 +32,18 @@
       {{ title }}
     </h1>
 
-    <p class="govuk-body">
+    <p class="govuk-body-m">
+      Planning appeals will be shown here. All users will be notified by email when a new appeal is added.
+    </p>
+
+    {# <p class="govuk-body">
       <a href="access?action=&shared=1" class="govuk-link">
         People who can manage these appeals
       </a>
+    </p> #}
+
+    <p class="govuk-body-m">
+      You can <a href="access?action=" class="govuk-link">add and remove account users</a>.
     </p>
 
   </div>
