--- a/app/views/lpa/v1/appeals.html
+++ b/app/views/lpa/v1/appeals.html
@@ -109,22 +109,11 @@
     </table>
   </div>
 
-  {# <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m">
-      Closed appeals
-    </h2>
-  </div> #}
-
-    <!-- this is a prototype only link -->
-    <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
-      <p class="govuk-body-s pins-prototype-only">
-        <a href="no-appeals?appeals=">
-          Empty the table
-        </a>
-      </p>
-    </div>
-
-  </div>
 </div>
 
 {% endblock %}
+
+{% set prototypeLinks = [{
+  href: 'no-appeals?appeals=',
+  text: 'Empty the table'}]
+%}
