Updates to appeal and application references to align meta data between the account and the questionnaire task list

--- a/app/views/lpa/v1/appeals.html
+++ b/app/views/lpa/v1/appeals.html
@@ -69,14 +69,17 @@
           <tr class="govuk-table__row">
 
             <th scope="row" class="govuk-table__cell">
-              APP/01/22/0119871
+              APP/Q9999/D/21/1345264
             </th>
-            {# <td class="govuk-table__cell">Full planning</td> #}
-            <td class="govuk-table__cell">1021222</td>
+
+            <td class="govuk-table__cell">
+              21/05058/FUL
+            </td>
 
             <td class="govuk-table__cell">
               {{ 6 | daysInFuture }}
             </td>
+
             <td class="govuk-table__cell">
               <a href="/lpa-questionnaire/v10/task-list?non-determination=false" class="govuk-link govuk-link--no-visited-state">
                 Complete questionnaire
@@ -88,11 +91,11 @@
         <tr class="govuk-table__row">
 
           <th scope="row" class="govuk-table__cell">
-            APP/03/22/0120039
+            APP/Q9999/D/21/1287330
           </th>
-          {# <td class="govuk-table__cell">Full planning</td> #}
+
           <td class="govuk-table__cell">
-            1287330
+            22/0120039/FUL
           </td>
 
           <td class="govuk-table__cell">
