Added a link to the confirmation page from the task list for UR

--- a/app/views/lpa-questionnaire/v10/task-list.html
+++ b/app/views/lpa-questionnaire/v10/task-list.html
@@ -1,4 +1,5 @@
 {% extends location+"_layout.html" %}
+{% set prototypeLinks = [{href: 'confirmation', text: 'Skip to confirmation'}] %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
