Not working: adding users to a list

--- a/app/views/lpa/v1/access.html
+++ b/app/views/lpa/v1/access.html
@@ -36,6 +36,25 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <p class="govuk-body-l">
+      Users = {{ data['users'] }} <br>
+      All users = {{ data['allUsers'] }} <br>
+      Email = {{ data['email'] }} <br>
+      Action = {{ data['action'] }} <br>
+    </p>
+
+    {% if data['users'] > 0 %}
+      <div class="govuk-inset-text">
+        <p class="govuk-l">
+          {% if data['users'] == 1 %}
+            You have added {{ data['users'] }} user </a>
+          {% else %}
+            You have added {{ data['users'] }} users </a>
+          {% endif %}
+        </p>
+      </div>
+    {% endif %}
+
     {% set added %}
       <mark role="alert">
         <h3 class="govuk-notification-banner__heading">
@@ -142,6 +161,42 @@
 
       </tbody>
     </table>
+
+
+    <table class="govuk-table">
+
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header">User</th>
+          <th scope="col" class="govuk-table__header govuk-table__cell--numeric govuk-!-width-one-quarter"></th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+
+        <!-- user instance -->
+        {% for i in allUsers %}
+
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
+              {% if i.email %}
+                {{ i.email }}
+              {% else %}
+                sam.fisher@leeds.gov.uk
+              {% endif %}
+            </td>
+
+            <td class="govuk-table__cell govuk-table__cell--numeric">
+              <a href="confirm-remove" class="govuk-link govuk-link--no-visited-state">
+                Remove<span class="visually-hidden"> {{ i.email }}</span>
+              </a>
+            </td>
+          </tr>
+
+        {% endfor %}
+
+      </tbody>
+    </table>
+
 
   </div>
 </div>
